:hover selector fails when hovering over a child select element with size attribute https://bugs.webkit.org/show_bug.cgi?id=67594

Patch by Sameer Patil <mkrp87@motorola.com> on 2011-09-21
Reviewed by Darin Adler.

Source/WebCore:

Test: fast/css/hover-affects-ancestor.html

This patch addresses the problem of deactivation of the ancestor element :hover rules
when hovered its contained elements.

* rendering/RenderLayer.cpp:
(WebCore::RenderLayer::updateHoverActiveState):

LayoutTests:

* fast/css/hover-affects-ancestor-expected.txt: Added.
* fast/css/hover-affects-ancestor.html: Added.

Canonical link: https://commits.webkit.org/84538@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@95694 268f45cc-cd09-0410-ab3c-d52691b4dbfc